--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@angular/animations": "~12.0.1",
     "@angular/common": "~12.0.1",
     "@angular/compiler": "~12.0.1",
-    "@angular/core": "~12.0.1",
+    "@angular/core": "^12.0.5",
     "@angular/forms": "~12.0.1",
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
