--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "rapid-coder": {
+    "rapidcoder": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/rapid-coder",
+            "outputPath": "dist/rapidcoder",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "rapid-coder:build:production"
+              "browserTarget": "rapidcoder:build:production"
             },
             "development": {
-              "browserTarget": "rapid-coder:build:development"
+              "browserTarget": "rapidcoder:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,14 +83,16 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "rapid-coder:build"
+            "browserTarget": "rapidcoder:build"
           }
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "sass",
             "assets": [
               "src/favicon.ico",
@@ -105,5 +107,5 @@
       }
     }
   },
-  "defaultProject": "rapid-coder"
+  "defaultProject": "rapidcoder"
 }
